--- a/app/elements/coder/code-editor/code-editor.html
+++ b/app/elements/coder/code-editor/code-editor.html
@@ -189,13 +189,27 @@
 			},
 			_addContextMenuListener: function(){
 				document.addEventListener('click', function(e){
-					if (!util.clickInsideElement(e, 'context-menu')){
-						if (util.clickInsideElement(e, 'explorer-folder')){
+					if (!this._clickInsideElement(e, 'context-menu')){
+						if (this._clickInsideElement(e, 'explorer-folder')){
 							return;
 						}
 						document.querySelector('context-menu').hideMenu();
 					}
 				});
+			},
+			_clickInsideElement: function(e, elName){
+				elName = elName.toLowerCase();
+				var el = e.srcElement || e.target;
+				if (el.tagName.toLowerCase() === elName){
+					return el;
+				}else{
+					while (!!(el = el.parentNode)){
+						if (!!el.tagName && el.tagName.toLowerCase() === elName){
+							return el;
+						}
+					}
+				}
+				return false;
 			}
 		});
 	</script>
