--- a/app/elements/coder/code-editor/file-explorer/explorer-file.html
+++ b/app/elements/coder/code-editor/file-explorer/explorer-file.html
@@ -51,11 +51,11 @@
 			},
 			markSelected: function(){
 				this.$.wrapper.style.backgroundColor = 'lightgray';
-				this.meta.selected = true;
+				this.set('meta.selected', true);
 			},
 			markUnselected: function(){
 				this.$.wrapper.style.backgroundColor = '';
-				this.meta.selected = false;
+				this.set('meta.selected', false);
 			},
 			getContent: function(){
 				return this.meta.content;
