--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -60,20 +60,7 @@ window.addEventListener('WebComponentsReady', function() {
 		});
 	});
 
-	page('/myprofile', function() {
-		if(!!app.user.activeOrganization){
-			alert('Company profile not yet available');
-			page('/');
-			return;
-		}
-		Polymer.Base.importHref('/elements/coder/profile/profile-page.html', function(){
-			var page = document.createElement('profile-page');
-			page.username = app.user.username;
-			app.swapContent(page);
-		});
-	});
-
-	page('/profile/:username', function(ctx) {
+	page('/u/:username', function(ctx) {
 		Polymer.Base.importHref('/elements/coder/profile/profile-page.html', function(){
 			var page = document.createElement('profile-page');
 			page.username = ctx.params.username;
