Rewrite file explorer

--- a/app/elements/coder/code-editor/code-editor-with-actions.html
+++ b/app/elements/coder/code-editor/code-editor-with-actions.html
@@ -172,7 +172,7 @@
 						this.$.codeEditor.setFilesJson(cachedCode);
 						return;
 					}
-					this.$.codeEditor.clearFiles();
+					//this.$.codeEditor.clearFiles();
 					if(!this.task || !this.task.templates || !this.language){
 						return;
 					}
