--- a/app/elements/coder/challenge/tasks/endpoints/canvas-game-task.html
+++ b/app/elements/coder/challenge/tasks/endpoints/canvas-game-task.html
@@ -5,9 +5,10 @@
 <link rel="import" href="/elements/coder/code-editor/code-editor.html">
 <link rel="import" href="/elements/coder/code-editor/language-selector.html">
 <link rel="import" href="/elements/common/services/template-service.html">
-<link rel="import" href="task-display.html">
+<link rel="import" href="/elements/tasks/task-display.html">
 <link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
+<!-- @deprecated -->
 <dom-module id="canvas-game-task">
 	<style>
 		:host{
