--- a/app/elements/coder/challenge/tasks/endpoints/coder-javaut-task.html
+++ b/app/elements/coder/challenge/tasks/endpoints/coder-javaut-task.html
@@ -1,7 +1,8 @@
 <link rel="import" href="general-code-task.html">
-<link rel="import" href="/elements/coder/code-editor/consoles/javaut-console.html">
+<link rel="import" href="/elements/coder/code-editor/consoles/test-stats-console.html">
 
-<dom-module id="javaut-task">
+<!-- @deprecated -->
+<dom-module id="coder-javaut-task">
 	<style>
 		:host{
 			display: block;
@@ -10,12 +11,12 @@
 	</style>
 	<template>
 		<code-task task="{{task}}" control="{{control}}" finished-button-class="{{finishButtonClass}}">
-			<javaut-console id="console"></javaut-console>
+			<test-stats-console task="{{task}}" id="console"></test-stats-console>
 		</code-task>
 	</template>
 	<script>
 		Polymer({
-			is: 'javaut-task',
+			is: 'coder-javaut-task',
 			properties: {
 				task: {
 					type: Object,
@@ -48,13 +49,8 @@
 				console.log(err);
 			},
 			_onWsMessage: function(data){
-				var response = JSON.parse(data.detail);
-				if(response.Results === undefined || response.Results.length === 0 || response.Stderr !== ''){
-					this.finishButtonClass = 'error';
-				}else{
-					this.finishButtonClass = 'success';
-				}
 				this.$.console.setOutput(JSON.parse(data.detail));
+				this.finishButtonClass = this.$.console.allGreen() ? 'success' : 'error';
 			},
 			afterPropertiesSet: function(){
 				this.control = {};
