--- a/app/elements/coder/challenge/tasks/endpoints/general-code-task.html
+++ b/app/elements/coder/challenge/tasks/endpoints/general-code-task.html
@@ -7,6 +7,7 @@
 <link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 <link rel="import" href="/bower_components/iron-icons/av-icons.html">
 
+<!-- @deprecated -->
 <dom-module id="code-task">
 	<style>
 		:host{
