--- a/app/elements/coder/challenge/tasks/endpoints/javaut-task.html
+++ b/app/elements/coder/challenge/tasks/endpoints/javaut-task.html
@@ -1,7 +1,8 @@
 <link rel="import" href="general-code-task.html">
-<link rel="import" href="/elements/coder/code-editor/consoles/test-stats-console.html">
+<link rel="import" href="/elements/coder/code-editor/consoles/javaut-console.html">
 
-<dom-module id="output-match-task">
+<!-- @deprecated -->
+<dom-module id="javaut-task">
 	<style>
 		:host{
 			display: block;
@@ -10,17 +11,21 @@
 	</style>
 	<template>
 		<code-task task="{{task}}" control="{{control}}" finished-button-class="{{finishButtonClass}}">
-			<test-stats-console id="console" task="{{task}}"></test-stats-console>
+			<javaut-console id="console"></javaut-console>
 		</code-task>
 	</template>
 	<script>
 		Polymer({
-			is: 'output-match-task',
+			is: 'javaut-task',
 			properties: {
 				task: {
 					type: Object,
 					notify: true,
 					reflectToAttribute: true
+				},
+				control: {
+					type: Object,
+					notify: true
 				},
 				finishButtonClass:{
 					type: String,
@@ -33,13 +38,7 @@
 			listeners: {
 				'ws-onerror': '_onWsError',
 				'ws-onmessage': '_onWsMessage',
-				'ws-onopen': '_onWsOpen',
-				'ws-message': '_onMessage'
-			},
-			_onMessage: function(m){
-				var detail = JSON.parse(m.detail);
-				console.log(detail);
-				this.$.console.setOutput(detail);
+				'ws-onopen': '_onWsOpen'
 			},
 			_onWsOpen: function(){
 				// default action
@@ -50,7 +49,12 @@
 				console.log(err);
 			},
 			_onWsMessage: function(data){
-				//default implementation
+				var response = JSON.parse(data.detail);
+				if(response.Results === undefined || response.Results.length === 0 || response.Stderr !== ''){
+					this.finishButtonClass = 'error';
+				}else{
+					this.finishButtonClass = 'success';
+				}
 				this.$.console.setOutput(JSON.parse(data.detail));
 			},
 			afterPropertiesSet: function(){
