--- a/app/elements/coder/challenge/tasks/endpoints/simple-code-task.html
+++ b/app/elements/coder/challenge/tasks/endpoints/simple-code-task.html
@@ -1,6 +1,7 @@
 <link rel="import" href="general-code-task.html">
 <link rel="import" href="/elements/coder/code-editor/consoles/simple-console.html">
 
+<!-- @deprecated -->
 <dom-module id="simple-code-task">
 	<style>
 		:host{
