--- a/app/elements/coder/challenge/tasks/endpoints/ccc-drone-task.html
+++ b/app/elements/coder/challenge/tasks/endpoints/ccc-drone-task.html
@@ -63,6 +63,10 @@
 	.halfScreen {
 		width: 50%;
 	}
+
+	#leftPages {
+		height: calc(100% - 50px);
+	}
 </style>
 	<template>
 		<div id="componentWrapper">
@@ -73,7 +77,7 @@
 				</paper-tabs>
 
 				<paper-material id="leftCard" elevation="1">
-					<iron-pages selected="{{leftTab}}">
+					<iron-pages id="leftPages" selected="{{leftTab}}" class="fullHeight">
 						<tabbed-console id="console" task="{{task}}"></tabbed-console>
 						<challenge-leaderboard id="leaderboard" challenge-id="{{challengeId}}"></challenge-leaderboard>
 					</iron-pages>
