Clean up explorer

--- a/app/elements/coder/code-editor/file-explorer/context-menu.html
+++ b/app/elements/coder/code-editor/file-explorer/context-menu.html
@@ -98,7 +98,7 @@
 				this.selectedItem.addFile();
 			},
 			_rename: function() {
-				this.selectedItem.rename();
+				this.selectedItem.startRenaming();
 				this.hideMenu();
 			},
 			_delete: function() {
