Settings: check retyped password on frontend

--- a/app/elements/common/settings/change-password-dialog.html
+++ b/app/elements/common/settings/change-password-dialog.html
@@ -7,6 +7,8 @@
 <link rel="import" href="/bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="/bower_components/iron-form/iron-form.html">
 
+<link rel="import" href="match-password-validator.html">
+
 <dom-module id="change-password-dialog">
 	<style include="iron-flex iron-flex-reverse">
 		.fieldList {
@@ -26,6 +28,7 @@
 			on-response="_onResponse"
 			on-error="_onError">
 		</iron-ajax>
+			<match-password other-password="[[password.newPassword]]" validator-name="match-password-validator"></match-password>
 		<paper-dialog id="changePasswordDialog" style="background: white;" modal>
 			<h4>Change password</h4>
 			<div class="fieldList">
@@ -35,7 +38,7 @@
 					<paper-input type="password" label="New" value="{{password.newPassword}}"
 						required minlength="6" maxlength="40" auto-validate error-message="Must be between 6 and 40 chars."></paper-input>
 					<paper-input type="password" label="Re-type new" value="{{password.retypedPassword}}"
-						required minlength="6" maxlength="40" auto-validate error-message="Must be between 6 and 40 chars."></paper-input>
+						required auto-validate validator="match-password-validator" error-message="Must match the new password."></paper-input>
 				</form>
 			</div>
 			<div class="buttons">
@@ -70,6 +73,7 @@
 			if(!this.$.form.validate()){
 				return;
 			}
+			delete this.password.retypedPassword;
 			this.$.savePasswordRequest.body = this.password;
 			this.$.savePasswordRequest.url = util.build('/user/password');
 			this.$.savePasswordRequest.generateRequest();
