--- a/app/elements/coder/code-editor/file-explorer/explorer-item.html
+++ b/app/elements/coder/code-editor/file-explorer/explorer-item.html
@@ -142,6 +142,7 @@
 					from: this.path,
 					to:   name
 				});
+				this.set('renaming', false);
 			},
 			startRenaming: function() {
 				if (this.renaming) {
